Prevent the development section to briefly be visible on start up

--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -128,6 +128,9 @@ a:active, img:active{
     width: 6em;
 }
 
+#home-page-development{
+    display: none;
+}
 
 /********* Body *************/
 
